@@ -1,6 +1,5 @@
 For 1.4:
    Finish doc TODO list
-   Fix keyboard shortcut for unhide all
    Update plugin docs to point to User's 1.4 plugin directory
 
 For 1.6:
