@@ -3,6 +3,10 @@ Changes for 1.3.8
    Rotate texture coordinates
    Horizontal/vertical flip texture coordinates
    Allow user to set color of texture coordinate lines and selection vertices.
+   Include hidden triangles in BSP tree calculation, but don't draw render
+      hidden triangles
+   Change hide unselected so that it operates on the face level rather than
+      face and vertex
    Fix to prevent selection of hidden faces when using the "ignore
       back-facing" option
    Fix broken shortcuts on geometry sub-menus
